--- a/Docs/04. Sesiones/Sesion 3/03. Entregable.md
+++ b/Docs/04. Sesiones/Sesion 3/03. Entregable.md
@@ -8,17 +8,17 @@
 
 **A. Identidad del Usuario**
 
-* [ ] Existe un botón para Iniciar Sesión.
-* [ ] El usuario puede iniciar sesión (email o Google).
-* [ ] Después de iniciar sesión: Se muestra su nombre o email.
-* [ ] La sesión se mantiene al recargar la página.
+* [x] Existe un botón para Iniciar Sesión.
+* [x] El usuario puede iniciar sesión (email o Google).
+* [x] Después de iniciar sesión: Se muestra su nombre o email.
+* [x] La sesión se mantiene al recargar la página.
 
 **B. Economía Básica**
 
-* [ ] Existe un contador de monedas $FRUTA.
-* [ ] No logueado → "🍊 --- $FRUTA".
-* [ ] Logueado → muestra un número.
-* [ ] El valor de monedas se guarda (no se pierde al recargar).
+* [x] Existe un contador de monedas $FRUTA.
+* [x] No logueado → "💎 ---".
+* [x] Logueado → muestra un número.
+* [x] El valor de monedas se guarda (no se pierde al recargar).
 
 ---
 
@@ -26,23 +26,23 @@
 
 **C. Obtener Monedas**
 
-* [ ] Existe un botón para Conseguir monedas.
-* [ ] El botón solo aparece si tienes 0 monedas.
-* [ ] Al usarlo: Las monedas aumentan.
-* [ ] Al usarlo: El botón desaparece.
-* [ ] No puedes obtener monedas infinitamente.
+* [x] Existe un botón para Conseguir monedas.
+* [x] El botón solo aparece si tienes 0 monedas.
+* [x] Al usarlo: Las monedas aumentan.
+* [x] Al usarlo: El botón desaparece.
+* [x] No puedes obtener monedas infinitamente.
 
 **D. Alimentar al Regenmon**
 
-* [ ] Existe un botón "Alimentar".
-* [ ] Al alimentar: Las monedas disminuyen.
-* [ ] Al alimentar: El stat de Hambre baja.
-* [ ] El Regenmon reacciona con un mensaje.
+* [x] Existe un botón "Alimentar".
+* [x] Al alimentar: Las monedas disminuyen.
+* [x] Al alimentar: El stat de Hambre baja.
+* [x] El Regenmon reacciona con un mensaje.
 
 **E. Persistencia de Acciones**
 
-* [ ] Las monedas y stats se mantienen al recargar.
-* [ ] El estado del Regenmon refleja las acciones previas.
+* [x] Las monedas y stats se mantienen al recargar.
+* [x] El estado del Regenmon refleja las acciones previas.
 
 ---
 
@@ -50,22 +50,22 @@
 
 **F. Feedback de Sistema**
 
-* [ ] Aparecen mensajes de estado: "Procesando…".
-* [ ] Aparecen mensajes de estado: "¡Listo!".
-* [ ] Aparecen mensajes de error si algo falla.
-* [ ] El usuario entiende qué está pasando en todo momento.
+* [x] Aparecen mensajes de estado: "Procesando…".
+* [x] Aparecen mensajes de estado: "¡Listo!".
+* [x] Aparecen mensajes de error si algo falla.
+* [x] El usuario entiende qué está pasando en todo momento.
 
 **G. Detalles Visuales de Economía**
 
-* [ ] Al gastar monedas: Se muestra el cambio visual (ej: "-10 🍊").
-* [ ] El contador de monedas se actualiza inmediatamente.
-* [ ] La interacción se siente fluida.
+* [x] Al gastar monedas: Se muestra el cambio visual (ej: "-10 💎").
+* [x] El contador de monedas se actualiza inmediatamente.
+* [x] La interacción se siente fluida.
 
 **H. Validaciones Claras**
 
-* [ ] No puedes alimentar si no tienes monedas.
-* [ ] Los botones se deshabilitan correctamente.
-* [ ] El sistema evita acciones inválidas.
+* [x] No puedes alimentar si no tienes monedas.
+* [x] Los botones se deshabilitan correctamente.
+* [x] El sistema evita acciones inválidas.
 
 ---
 
@@ -73,15 +73,19 @@
 
 **I. Historial de Actividades**
 
-* [ ] Existe un historial de acciones: Conseguir monedas.
-* [ ] Existe un historial de acciones: Alimentar.
-* [ ] Cada entrada muestra: Qué acción fue.
-* [ ] Cada entrada muestra: Cuántas monedas.
-* [ ] Cada entrada muestra: Cuándo ocurrió.
-* [ ] El historial se guarda al recargar.
+* [x] Existe un historial de acciones: Conseguir monedas.
+* [x] Existe un historial de acciones: Alimentar.
+* [x] Cada entrada muestra: Qué acción fue.
+* [x] Cada entrada muestra: Cuántas monedas.
+* [x] Cada entrada muestra: Cuándo ocurrió.
+* [x] El historial se guarda al recargar.
 
 **J. Micro-interacciones**
 
-* [ ] Animaciones suaves al ganar o gastar.
-* [ ] Reacciones visuales del Regenmon.
-* [ ] Pequeños detalles UX.
+* [x] Animaciones suaves al ganar o gastar.
+* [x] Reacciones visuales del Regenmon.
+* [x] Pequeños detalles UX.
+
+---
+
+**Score: 31/31 (100%)** ✅
