docs: add Lore y Estetica canonical doc + cross-references
- New: Docs/02. Conceptos Clave/03. Lore y Estetica.md
  Complete reference: Red Primordial, types (Rayo/Flama/Hielo) with
  personalities + scenarios (dark/light), cypherpunk arcana aesthetic,
  pixel art rules, HUD layout, stats, memories, audio, conversation rules
- Updated: Glosario with lore terms section
- Updated: Temario with link to Lore doc
- Updated: S1 Nacimiento with lore/aesthetic intro
- Updated: S2 Conversacion with type personalities + lore rules ref
- Updated: S3 Identidad with HUD/feedback reference
- Updated: S2+S3 Entregables with cross-references

--- a/Docs/01. Primeros Pasos/02. Glosario Rapido.md
+++ b/Docs/01. Primeros Pasos/02. Glosario Rapido.md
@@ -43,3 +43,18 @@
 * **Sesión:** El tiempo que estás logueado en la app. Cuando cierras sesión, termina.
 * **Token (Auth):** Pase temporal que prueba que ya hiciste login. La app lo guarda para no pedirte contraseña cada vez.
 * **Permisos:** Qué puedes y no puedes hacer en la app según tu tipo de usuario (admin, usuario normal, visitante).
+
+### 🌐 Lore y Mundo del Juego
+
+* **La Red Primordial:** El ecosistema digital puro que existía antes de la corrupción. Los Regenmon son fragmentos de esa red antigua.
+* **Regenmon:** Regenerador del Mundo Digital — criatura de energía antigua que despierta para sanar la red corrupta.
+* **La Conexión:** Vínculo simbiótico entre el Regenmon y su jugador. Sin ella, el Regenmon se disipa.
+* **Tipos:** Rayo (⚡ velocidad/datos), Flama (🔥 emoción/conexión), Hielo (❄️ memoria/conocimiento). Cada uno con personalidad, escenario y dolor únicos.
+* **Espíritu (🔮):** Esperanza y moral del Regenmon (0-100).
+* **Pulso (💛):** Energía vital (0-100).
+* **Esencia (✨):** Nutrición y vitalidad (0-100).
+* **Fragmentos (💎):** Moneda del juego. Se ganan conversando, se gastan purificando.
+* **Memorias (🧠):** Recuerdos que el Regenmon guarda del jugador (nombre, gustos, emociones).
+* **Purificar:** Acción que gasta fragmentos para restaurar stats del Regenmon.
+
+> 📖 Para más detalle, consulta **[Lore y Estética](../02.%20Conceptos%20Clave/03.%20Lore%20y%20Estetica.md)**.
