--- a/Docs/04. Sesiones/Sesion 1/01. Sesion 1 - Nacimiento.md
+++ b/Docs/04. Sesiones/Sesion 1/01. Sesion 1 - Nacimiento.md
@@ -20,11 +20,15 @@ No escribirás código desde cero. Aprenderás el ciclo de:
 * **Revisar:** Analizar lo que la IA genera.
 * **Mejorar:** Ajustar hasta que funcione como esperas.
 
-### 2. Componentes: Los bloques de tu app
+### 2. Estética y mundo del juego
+
+Tu Regenmon no nace en el vacío. Existe en **La Red Primordial**, un ecosistema digital que alguna vez fue puro pero se corrompió. Los Regenmon son fragmentos de energía antigua que despiertan para regenerar lo que se rompió. La estética es **retro-futurista cypherpunk + medieval arcana**: pixel art, terminales, runas digitales. *(Ver: [Lore y Estética](../../02.%20Conceptos%20Clave/03.%20Lore%20y%20Estetica.md))*
+
+### 3. Componentes: Los bloques de tu app
 
 Entenderás que una app se construye por piezas reutilizables (como bloques de LEGO). Tu Regenmon será uno de esos componentes con una función clara.
 
-### 3. Persistencia: Guardar información
+### 4. Persistencia: Guardar información
 
 Aprenderás cómo una app "recuerda" cosas (Estado y Persistencia). Guardaremos:
 
@@ -32,7 +36,7 @@ Aprenderás cómo una app "recuerda" cosas (Estado y Persistencia). Guardaremos:
 * Su tipo y estadísticas.
 * *Incluso si cierras el navegador, los datos seguirán ahí.*
 
-### 4. Deploy: Publicar en internet
+### 5. Deploy: Publicar en internet
 
 Tu proyecto no se quedará en tu computadora. Aprenderás a:
 
