--- a/Docs/04. Sesiones/Sesion 2/03. Entregable.md
+++ b/Docs/04. Sesiones/Sesion 2/03. Entregable.md
@@ -92,4 +92,6 @@
 
 ---
 
+> 📖 Las personalidades por tipo (Rayo/Flama/Hielo), reglas de lore indirecto, y sistema de memorias están documentadas en **[Lore y Estética](../../02.%20Conceptos%20Clave/03.%20Lore%20y%20Estetica.md)**.
+
 **Score: 30/30 (100%)** ✅
