docs: add aesthetic/UI sections to LORE.md + entregable cross-refs
Added to LORE.md (canonical):
- Cypherpunk arcana aesthetic vision
- Pixel art rules (PNG sprites, no face, SVG overlays, transparency=health)
- Sprites and scenarios per type (dark/light)
- Typography (Press Start 2P, clamp() responsive)
- Color palette (dark/light themes)
- HUD layout (top bar, center, bottom bar)
- Floating deltas, toast system, settings panel
- Audio, game actions table

Updated entregable S2+S3 cross-references to point to LORE.md
NO changes to any other Docs/ files

--- a/Docs/04. Sesiones/Sesion 3/03. Entregable.md
+++ b/Docs/04. Sesiones/Sesion 3/03. Entregable.md
@@ -88,6 +88,6 @@
 
 ---
 
-> 📖 El layout del HUD, toast system, floating deltas y sistema de stats están documentados en **[Lore y Estética](../../02.%20Conceptos%20Clave/03.%20Lore%20y%20Estetica.md)**.
+> 📖 El layout del HUD, toast system, floating deltas y sistema de stats están documentados en **[Lore y Estética](../../LORE.md)**.
 
 **Score: 31/31 (100%)** ✅
