--- a/Docs/04. Sesiones/Sesion 1/03. Entregable.md
+++ b/Docs/04. Sesiones/Sesion 1/03. Entregable.md
@@ -10,23 +10,23 @@ Esta lista define qué tan lejos has llegado con tu aplicación. Puedes usarla p
 
 
 **A. Creación Básica**
-* [x] App desplegada con **URL pública** (Vercel).
-* [x] Se muestra un Regenmon en pantalla.
-* [x] Input para escribir el nombre.
-* [x] Selector de tipo (🌱 / 💧 / ✨).
-* [x] Botón funcional para crear el Regenmon.
+* [ ] App desplegada con **URL pública** (Vercel).
+* [ ] Se muestra un Regenmon en pantalla.
+* [ ] Input para escribir el nombre.
+* [ ] Selector de tipo (🌱 / 💧 / ✨).
+* [ ] Botón funcional para crear el Regenmon.
 
 
 **B. Display Principal**
-* [x] Se muestra el nombre del Regenmon.
-* [x] Se muestra un sprite o emoji del tipo elegido.
-* [x] 3 barras de stats: **Felicidad, Energía y Hambre**.
-* [x] Los stats tienen valores iniciales (no importa el número exacto).
+* [ ] Se muestra el nombre del Regenmon.
+* [ ] Se muestra un sprite o emoji del tipo elegido.
+* [ ] 3 barras de stats: **Felicidad, Energía y Hambre**.
+* [ ] Los stats tienen valores iniciales (no importa el número exacto).
 
 
 **C. Persistencia Básica**
-* [x] Al recargar la página: El Regenmon **sigue existiendo**.
-* [x] Al recargar la página: El nombre y tipo **no se pierden**.
+* [ ] Al recargar la página: El Regenmon **sigue existiendo**.
+* [ ] Al recargar la página: El nombre y tipo **no se pierden**.
 
 
 
@@ -36,25 +36,25 @@ Esta lista define qué tan lejos has llegado con tu aplicación. Puedes usarla p
 
 
 **D. Modal de Creación Funcional**
-* [x] El modal aparece solo si NO existe Regenmon.
-* [x] Input de nombre visible y usable.
-* [x] No permite crear Regenmon sin nombre.
-* [x] Solo se puede elegir un tipo a la vez.
-* [x] El botón de crear se deshabilita si faltan datos.
-* [x] El botón de crear crea el Regenmon correctamente.
+* [ ] El modal aparece solo si NO existe Regenmon.
+* [ ] Input de nombre visible y usable.
+* [ ] No permite crear Regenmon sin nombre.
+* [ ] Solo se puede elegir un tipo a la vez.
+* [ ] El botón de crear se deshabilita si faltan datos.
+* [ ] El botón de crear crea el Regenmon correctamente.
 
 
 **E. Display Refinado**
-* [x] El nombre se muestra de forma clara y centrada.
-* [x] El sprite está centrado en su contenedor.
-* [x] Las barras tienen colores distintos
-* [x] Las barras representan visualmente el valor
+* [ ] El nombre se muestra de forma clara y centrada.
+* [ ] El sprite está centrado en su contenedor.
+* [ ] Las barras tienen colores distintos
+* [ ] Las barras representan visualmente el valor
 
 
 **F. Persistencia Completa**
-* [x] Los datos se guardan en localStorage.
-* [x] Al recargar: No reaparece el modal.
-* [x] Al recargar: Stats y tipo persisten
+* [ ] Los datos se guardan en localStorage.
+* [ ] Al recargar: No reaparece el modal.
+* [ ] Al recargar: Stats y tipo persisten
 
 
 ---
@@ -63,24 +63,24 @@ Esta lista define qué tan lejos has llegado con tu aplicación. Puedes usarla p
 
 
 **G. Validaciones y UX**
-* [x] Nombre con validaciones claras (mín / máx).
-* [x] Mensajes de error visibles y entendibles.
-* [x] Feedback visual al seleccionar tipo.
-* [x] Botón cambia visualmente según estado.
+* [ ] Nombre con validaciones claras (mín / máx).
+* [ ] Mensajes de error visibles y entendibles.
+* [ ] Feedback visual al seleccionar tipo.
+* [ ] Botón cambia visualmente según estado.
 
 
 **H. Reinicio del Regenmon**
-* [x] Botón de reinicio visible pero discreto.
-* [x] Modal de confirmación antes de borrar.
-* [x] Al confirmar: Se borra localStorage.
-* [x] Al confirmar: Vuelve el modal de creación.
+* [ ] Botón de reinicio visible pero discreto.
+* [ ] Modal de confirmación antes de borrar.
+* [ ] Al confirmar: Se borra localStorage.
+* [ ] Al confirmar: Vuelve el modal de creación.
 
 **I. Responsive**
-* [x] Funciona correctamente en celular.
-* [x] Funciona correctamente en tablet.
-* [x] Funciona correctamente en computadora.
-* [x] No se desborda el contenido.
-* [x] Texto legible sin zoom.
+* [ ] Funciona correctamente en celular.
+* [ ] Funciona correctamente en tablet.
+* [ ] Funciona correctamente en computadora.
+* [ ] No se desborda el contenido.
+* [ ] Texto legible sin zoom.
 
 
 
@@ -88,11 +88,7 @@ Esta lista define qué tan lejos has llegado con tu aplicación. Puedes usarla p
 
 ## 🟣 NIVEL 4 — BONUS / EXTRA
 
-* [x] Contador de caracteres en el nombre.
-* [x] Animaciones suaves (hover, transición).
-* [x] Estilo pixel/retro bien marcado.
-* [x] Microinteracciones visuales
-
----
-
-**Score: 35/35 (100%)** ✅
+* [ ] Contador de caracteres en el nombre.
+* [ ] Animaciones suaves (hover, transición).
+* [ ] Estilo pixel/retro bien marcado.
+* [ ] Microinteracciones visuales
