--- a/Docs/04. Sesiones/Sesion 2/01. Sesion 2 - Conversacion.md
+++ b/Docs/04. Sesiones/Sesion 2/01. Sesion 2 - Conversacion.md
@@ -33,11 +33,8 @@ No basta con conectar la IA. Debes decirle **cómo comportarse**. Aquí descubri
 **Diseñarás:**
 
 * Cómo habla el Regenmon (tono, estilo, personalidad).
-* Cómo reacciona según su tipo (Rayo, Flama, Hielo) — cada uno con personalidad, tema recurrente y dolor únicos.
-* Qué sabe sobre sí mismo (nombre, estadísticas, historia de La Red Primordial).
-* Reglas de lore indirecto: metáforas en lugar de menciones directas de corrupción.
-
-*(Ver personalidades completas y reglas de conversación en: [Lore y Estética](../../02.%20Conceptos%20Clave/03.%20Lore%20y%20Estetica.md))*
+* Cómo reacciona según su tipo (Agua, Tierra, Fuego).
+* Qué sabe sobre sí mismo (nombre, estadísticas, historia).
 
 Esta es tu primera experiencia con **prompt engineering**, uno de los skills más importantes en el desarrollo con IA.
 
