--- a/Docs/04. Sesiones/Sesion 2/03. Entregable.md
+++ b/Docs/04. Sesiones/Sesion 2/03. Entregable.md
@@ -8,17 +8,17 @@
 
 
 **A. Creación Básica**
-* [x] Existe un área de chat visible en la app.
-* [x] El usuario puede escribir un mensaje.
-* [x] El mensaje del usuario aparece en pantalla.
-* [x] El Regenmon responde con texto.
-* [x] La respuesta está en español.
+* [ ] Existe un área de chat visible en la app.
+* [ ] El usuario puede escribir un mensaje.
+* [ ] El mensaje del usuario aparece en pantalla.
+* [ ] El Regenmon responde con texto.
+* [ ] La respuesta está en español.
 
 
 **B. Flujo Conversacional**
-* [x] El chat permite enviar más de un mensaje.
-* [x] Usuario y Regenmon se distinguen visualmente (posición o color).
-* [x] La conversación se siente continua.
+* [ ] El chat permite enviar más de un mensaje.
+* [ ] Usuario y Regenmon se distinguen visualmente (posición o color).
+* [ ] La conversación se siente continua.
 
 
 
@@ -28,23 +28,23 @@
 
 
 **C. Experiencia de Chat Clara**
-* [x] El chat está integrado visualmente al Regenmon.
-* [x] Los mensajes del usuario se muestran en burbujas.
-* [x] Los mensajes del Regenmon se muestran en burbujas distintas.
-* [x] Existe un input claro para escribir mensajes.
-* [x] El input se limpia después de enviar.
+* [ ] El chat está integrado visualmente al Regenmon.
+* [ ] Los mensajes del usuario se muestran en burbujas.
+* [ ] Los mensajes del Regenmon se muestran en burbujas distintas.
+* [ ] Existe un input claro para escribir mensajes.
+* [ ] El input se limpia después de enviar.
 
 
 **D. Respuestas del Regenmon**
-* [x] El Regenmon responde automáticamente.
-* [x] Las respuestas son cortas (≈ menos de 50 palabras).
-* [x] El tono es consistente (amigable, neutral o definido).
+* [ ] El Regenmon responde automáticamente.
+* [ ] Las respuestas son cortas (≈ menos de 50 palabras).
+* [ ] El tono es consistente (amigable, neutral o definido).
 
 
 **E. Persistencia Básica**
-* [x] Los mensajes se guardan en localStorage.
-* [x] Al recargar: La conversación no se pierde.
-* [x] Al recargar: Se muestran mensajes previos.
+* [ ] Los mensajes se guardan en localStorage.
+* [ ] Al recargar: La conversación no se pierde.
+* [ ] Al recargar: Se muestran mensajes previos.
 
 
 
@@ -54,22 +54,22 @@
 
 
 **F. Feedback de Conversación**
-* [x] Aparece un indicador de "Escribiendo…" antes de la respuesta.
-* [x] El indicador desaparece al responder.
-* [x] El flujo no se siente inmediato ni cortado.
+* [ ] Aparece un indicador de "Escribiendo…" antes de la respuesta.
+* [ ] El indicador desaparece al responder.
+* [ ] El flujo no se siente inmediato ni cortado.
 
 
 **G. Sistema de Efectos en Stats**
-* [x] Las conversaciones afectan los stats del Regenmon.
-* [x] Regla: Interacción positiva → sube Felicidad.
-* [x] Regla: Conversación larga → baja Energía.
-* [x] El cambio de stats es visible.
+* [ ] Las conversaciones afectan los stats del Regenmon.
+* [ ] Regla: Interacción positiva → sube Felicidad.
+* [ ] Regla: Conversación larga → baja Energía.
+* [ ] El cambio de stats es visible.
 
 
 **H. Comportamiento Según Estado**
-* [x] El Regenmon cambia su forma de responder según stats.
-* [x] Bajo Energía → menciona cansancio.
-* [x] Alta Felicidad → se muestra más entusiasta.
+* [ ] El Regenmon cambia su forma de responder según stats.
+* [ ] Bajo Energía → menciona cansancio.
+* [ ] Alta Felicidad → se muestra más entusiasta.
 
 
 
@@ -79,19 +79,13 @@
 
 
 **I. Memoria Conversacional**
-* [x] El Regenmon detecta información personal (nombre, gustos, etc.).
-* [x] Guarda memorias en localStorage.
-* [x] Usa memorias en respuestas futuras.
-* [x] Muestra indicador de memorias (ej: 🧠 3).
+* [ ] El Regenmon detecta información personal (nombre, gustos, etc.).
+* [ ] Guarda memorias en localStorage.
+* [ ] Usa memorias en respuestas futuras.
+* [ ] Muestra indicador de memorias (ej: 🧠 3).
 
 
 **J. Feedback Visual Avanzado**
-* [x] Texto flotante al cambiar stats.
-* [x] Animaciones suaves en el chat.
-* [x] Micro-reacciones visuales.
-
----
-
-> 📖 Las personalidades por tipo (Rayo/Flama/Hielo), reglas de lore indirecto, y sistema de memorias están documentadas en **[Lore y Estética](../../LORE.md)**.
-
-**Score: 30/30 (100%)** ✅
+* [ ] Texto flotante al cambiar stats.
+* [ ] Animaciones suaves en el chat.
+* [ ] Micro-reacciones visuales.
